corpus/test-basics.txt
==================
Comments
==================
  set apples=8
  ; Set apples
  set pears=9 ; Set pears
---
(program
  (assignment
    (local_variable)
    (integer)
  )
  (comment)
  (assignment
    (local_variable)
    (integer)
  )
  (comment)
)
==================
Write Commands and Format Specifiers
==================
  write "There were 8",!
  quit
---
(program
  (command
    (keyword)
    (arguments
      (string)
      (format_specifier)))
  (command
    (keyword)))
==================
Arithmetic Expressions
==================
  set apples=7
  set pears=3+8
  set fruits=apples+pears
  set price=2
  set revenue=price*fruits
---
(program
  (assignment
    (local_variable)
    (integer)
  )
  (assignment
    (local_variable)            
    (binary_expression
      (integer)
      (integer)
    )
  )
  (assignment
    (local_variable)            
    (binary_expression
      (local_variable)
      (local_variable)
    )
  )
  (assignment
    (local_variable)
    (integer)
  )
  (assignment
    (local_variable)            
    (binary_expression
      (local_variable)
      (local_variable)
    )
  )
)
==================
Command Cases
==================
  Q 1
  QUIT 1
  q 1
  quit 1
---
(program
  (command
    (keyword)
    (arguments
      (integer)))
  (command
    (keyword)
    (arguments
      (integer)))
  (command
    (keyword)
    (arguments
      (integer)))
  (command
    (keyword)
    (arguments
      (integer))))
