corpus/test-compound-statements.txt
==================
If Statement
==================
  set abc=70
  if abc=70 set f=1
---
(program
  (assignment
    (local_variable)
    (integer))
  (if_statement
    (binary_expression
      (local_variable)
      (integer))
    (assignment
      (local_variable)
      (integer))))
==================
Single Line For Statement
==================
  F X=0:1:2 S ^ARRAY(X)=$FUNC(1, 2)
---
(program
)
==================
Single Line For Statement - Infinite Loop
==================
  F S VAR1=$FUNC(1, 2) Q:'VAR2
---
(program
  (for_statement)
